25 July 2007

* Tidied and refactored much of file.c and deliver-{mbox,maildir}.c.
* Brought back fatal and fatalx as #defines which prepend __func__ and pass
  through to log_fatal/log_fatalx.

24 July 2007

* Embedding an undefined macro in a string with ${} is no longer an error, it
  is just treated as empty. This makes ifdef/endif more useful.

17 July 2007

* Only store shared filename (NAME_MAX) in struct shm and construct path into
  temp dir on-the-fly. Saves (PATH_MAX - NAME_MAX) per struct.
* Trailing newlines are now stripped from message_id tag (as they used to
  be). This makes any existing caches by message-id useless.
* Use SO_RCVTIMEO to apply configured timeout when connecting to SSL servers
  (SSL_connect must block as it is the easiest way to ensure the certificate is
  received before checking its validity).

16 July 2007

* Outright reject configuration files that use caches unless built with -DDB,
  rather than waiting until the cache is used.
* Rewrite the malloc debugging stuff: lose the call counting, use a splay
  tree instead of a fixed array and use __builtin_return_address and direct
  calls from xmalloc.c rather than horrible #define games, even if it means 
  the ultimate output is less useful.

15 July 2007

* Permit each account to start multiple delivery child processes simultaneously
  (up to the maximum queue length). This doesn't help much in normal cases but
  with particularly lengthy but non-CPU-intensive delivery actions (try exec
  "sleep 1" ;-P), it can help a lot.
* Introduce some randomness into the lock sleep delay when waiting for mboxes.

14 July 2007

* Use mremap(2) on Linux.
 
13 July 2007

* Fix stupid bug (grr) in strb.c which caused a segfault if realloc moved the
  buffer when it was being expanded; also clean up macros a bit when here.

11 July 2007

* Add %[mail_rfc822date] which contains the mail date and time (or current date
  and time if invalid) in RFC822 format and %[rfc822date] which is the same for