@@ -1,4 +1,4 @@
-/* $Id: connect.c,v 1.64 2007-07-25 22:13:23 nicm Exp $ */
+/* $Id: connect.c,v 1.65 2007-07-30 18:22:43 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -44,6 +44,9 @@ int	httpproxy(struct server *, struct proxy *, struct io *, int, char **);
 int	socks5proxy(struct server *, struct proxy *, struct io *, int, char **);
 #endif
 SSL    *makessl(struct server *, int, int, int, char **);
+
+void	sslhandler(int);
+int	ssltimedout;
 
 char *
 sslerror(const char *fn)
@@ -528,14 +531,22 @@ httpproxy(struct server *srv,
 }
 #endif /* NO_PROXY */
 
+/* Signal handler for SIGALRM setitimer timeout. */
+void
+sslhandler(int sig)
+{
+	if (sig == SIGALRM)
+		ssltimedout = 1;
+}
+
 SSL *
 makessl(struct server *srv, int fd, int verify, int timeout, char **cause)
 {
 	SSL_CTX		*ctx;
 	SSL		*ssl;
 	int	 	 n, mode;
-	struct timeval	 tv, saved;
-	socklen_t	 size;
+	struct itimerval itv;
+	struct sigaction act;
 
 	ctx = SSL_CTX_new(SSLv23_client_method());
         SSL_CTX_set_options(ctx, SSL_OP_ALL);
@@ -563,26 +574,49 @@ makessl(struct server *srv, int fd, int verify, int timeout, char **cause)
 		fatal("fcntl failed");
 
 	/* Set the timeout. */
-	size = sizeof saved;
-	if (getsockopt(fd, SOL_SOCKET, SO_RCVTIMEO, &saved, &size) != 0)
-		fatal("getsockopt failed");
-	memset(&tv, 0, sizeof tv);
-	tv.tv_sec = timeout / 1000;
-	if (setsockopt(fd, SOL_SOCKET, SO_RCVTIMEO, &tv, sizeof tv) != 0)
-		fatal("setsockopt failed");
+	memset(&act, 0, sizeof act);
+	sigemptyset(&act.sa_mask);
+
+	act.sa_handler = sslhandler;
+	if (sigaction(SIGALRM, &act, NULL) != 0)
+		fatal("sigaction failed");
+
+	memset(&itv, 0, sizeof itv);
+	itv.it_value.tv_sec = timeout / 1000;
+	while (setitimer(ITIMER_REAL, &itv, NULL) != 0) {
+		/* 
+		 * If the timeout is too large (EINVAL), keep trying it until
+		 * it reaches a minimum of 30 seconds.
+		 */
+		if (errno != EINVAL || itv.it_value.tv_sec < 30000)
+			fatal("setitimer failed");
+		itv.it_value.tv_sec /= 2;
+	}
 
 	/* Connect with SSL.  */
 	SSL_set_connect_state(ssl);
 	if ((n = SSL_connect(ssl)) < 1) {
+		if (ssltimedout) {
+			xasprintf(
+			    cause, "SSL_connect: %s", strerror(ETIMEDOUT));
+			goto error;
+		}
 		*cause = sslerror2(SSL_get_error(ssl, n), "SSL_connect");
 		goto error;
 	}
 
-	/* Reset non-blocking mode and timeout. */
+	/* Reset non-blocking mode. */
 	if (fcntl(fd, F_SETFL, mode & ~O_NONBLOCK) == -1)
 		fatal("fcntl failed");
-	if (setsockopt(fd, SOL_SOCKET, SO_RCVTIMEO, &saved, sizeof saved) != 0)
-		fatal("setsockopt failed");
+
+	/* Clear the timeout. */
+	memset(&itv, 0, sizeof itv);
+	if (setitimer(ITIMER_REAL, &itv, NULL) != 0)
+		fatal("setitimer failed");
+
+	act.sa_handler = SIG_DFL;
+	if (sigaction(SIGALRM, &act, NULL) != 0)
+		fatal("sigaction failed");
 
 	/* Verify certificate. */
 	if (verify && sslverify(srv, ssl, cause) != 0)
